--- a/demo/demo-ios/demo-ios/PlayerViewController.xib
+++ b/demo/demo-ios/demo-ios/PlayerViewController.xib
@@ -18,6 +18,7 @@
                 <outlet property="totalTimeLabel" destination="N9a-ry-WfX" id="oQt-ud-J66"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                 <outlet property="view1" destination="yNR-k8-i8k" id="Jbf-bt-Q7U"/>
+                <outlet property="view2" destination="Kr2-QK-s3T" id="ll6-Fo-68I"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -25,6 +26,10 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kr2-QK-s3T">
+                    <rect key="frame" x="0.0" y="333" width="375" height="333.5"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yNR-k8-i8k">
                     <rect key="frame" x="0.0" y="50" width="375" height="283.5"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -120,6 +125,7 @@
                 <constraint firstItem="N9a-ry-WfX" firstAttribute="centerY" secondItem="KvZ-4g-DxG" secondAttribute="centerY" id="A86-3J-HK5"/>
                 <constraint firstItem="Fl7-Yh-lyd" firstAttribute="width" secondItem="B1q-g9-Vrs" secondAttribute="width" id="CWB-pb-Nhr"/>
                 <constraint firstItem="1Ni-i3-gt9" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="DEC-co-CTL"/>
+                <constraint firstItem="Kr2-QK-s3T" firstAttribute="top" secondItem="yNR-k8-i8k" secondAttribute="bottom" id="Dj4-YE-hjT"/>
                 <constraint firstAttribute="bottom" secondItem="KvZ-4g-DxG" secondAttribute="bottom" constant="20" id="NJi-fI-1Un"/>
                 <constraint firstItem="YYV-yF-5Pw" firstAttribute="centerY" secondItem="B1q-g9-Vrs" secondAttribute="centerY" id="Nea-yI-35m"/>
                 <constraint firstAttribute="trailing" secondItem="N9a-ry-WfX" secondAttribute="trailing" constant="16" id="QM8-KF-0vU"/>
@@ -128,9 +134,12 @@
                 <constraint firstItem="B1q-g9-Vrs" firstAttribute="leading" secondItem="z4U-C2-ln8" secondAttribute="leading" id="UIf-pb-fiG"/>
                 <constraint firstItem="Fl7-Yh-lyd" firstAttribute="height" secondItem="B1q-g9-Vrs" secondAttribute="height" id="b3Z-sz-BXJ"/>
                 <constraint firstItem="YYV-yF-5Pw" firstAttribute="trailing" secondItem="N9a-ry-WfX" secondAttribute="trailing" id="eX4-4I-de1"/>
+                <constraint firstAttribute="bottom" secondItem="Kr2-QK-s3T" secondAttribute="bottom" id="hnz-Tl-6au"/>
+                <constraint firstItem="Kr2-QK-s3T" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="iLL-Iy-KPS"/>
                 <constraint firstItem="Fl7-Yh-lyd" firstAttribute="leading" secondItem="B1q-g9-Vrs" secondAttribute="trailing" constant="10" id="n10-sF-qz8"/>
                 <constraint firstItem="z4U-C2-ln8" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="16" id="n7Z-Z9-At4"/>
                 <constraint firstItem="yNR-k8-i8k" firstAttribute="top" secondItem="1Ni-i3-gt9" secondAttribute="bottom" id="nbf-KY-d2F"/>
+                <constraint firstAttribute="trailing" secondItem="Kr2-QK-s3T" secondAttribute="trailing" id="okM-4K-hzC"/>
                 <constraint firstAttribute="centerY" secondItem="yNR-k8-i8k" secondAttribute="bottom" id="r7r-UT-kwc"/>
                 <constraint firstItem="1Ni-i3-gt9" firstAttribute="height" secondItem="B1q-g9-Vrs" secondAttribute="height" id="st4-zN-kd8"/>
                 <constraint firstItem="1Ni-i3-gt9" firstAttribute="width" secondItem="B1q-g9-Vrs" secondAttribute="width" id="tmD-hf-XCs"/>
