--- a/demo/demo-ios/demo-ios/PlayerViewController.xib
+++ b/demo/demo-ios/demo-ios/PlayerViewController.xib
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -27,7 +26,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kr2-QK-s3T">
-                    <rect key="frame" x="0.0" y="333" width="375" height="333.5"/>
+                    <rect key="frame" x="0.0" y="333.5" width="375" height="333.5"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yNR-k8-i8k">
@@ -49,7 +48,7 @@
                     </connections>
                 </slider>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z4U-C2-ln8">
-                    <rect key="frame" x="16" y="622" width="60" height="21"/>
+                    <rect key="frame" x="16" y="621.5" width="60" height="21"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="CvC-Co-iIN"/>
                         <constraint firstAttribute="width" constant="60" id="WYU-ME-EX7"/>
@@ -59,7 +58,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N9a-ry-WfX">
-                    <rect key="frame" x="299" y="622" width="60" height="21"/>
+                    <rect key="frame" x="299" y="621.5" width="60" height="21"/>
                     <constraints>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="FA9-1U-jqY"/>
                         <constraint firstAttribute="height" constant="21" id="MJG-fK-1ZG"/>
@@ -71,7 +70,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B1q-g9-Vrs">
-                    <rect key="frame" x="16" y="577" width="50" height="30"/>
+                    <rect key="frame" x="16" y="576.5" width="50" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="50" id="Dqx-2Z-BZb"/>
                         <constraint firstAttribute="height" constant="30" id="XnO-Uy-eRF"/>
@@ -85,7 +84,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fl7-Yh-lyd">
-                    <rect key="frame" x="76" y="577" width="50" height="30"/>
+                    <rect key="frame" x="76" y="576.5" width="50" height="30"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <state key="normal" title="Pause">
                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -95,7 +94,7 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="State" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YYV-yF-5Pw">
-                    <rect key="frame" x="279" y="581.5" width="80" height="21"/>
+                    <rect key="frame" x="279" y="581" width="80" height="21"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="OA3-F1-jJE"/>
                         <constraint firstAttribute="width" constant="80" id="kke-Of-dth"/>
@@ -115,7 +114,7 @@
                     </connections>
                 </button>
             </subviews>
-            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="z4U-C2-ln8" firstAttribute="top" secondItem="B1q-g9-Vrs" secondAttribute="bottom" constant="15" id="183-aD-aqE"/>
                 <constraint firstItem="1Ni-i3-gt9" firstAttribute="leading" secondItem="B1q-g9-Vrs" secondAttribute="leading" id="3MQ-dU-cVd"/>
