--- a/demo/demo-ios/demo-ios/SGPlayViewController.xib
+++ b/demo/demo-ios/demo-ios/SGPlayViewController.xib
@@ -1,23 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PlayerViewController">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SGPlayViewController">
             <connections>
                 <outlet property="currentTimeLabel" destination="z4U-C2-ln8" id="XAa-fP-ewL"/>
+                <outlet property="durationLabel" destination="N9a-ry-WfX" id="GiR-sg-qxm"/>
                 <outlet property="progressSilder" destination="KvZ-4g-DxG" id="OnA-jj-vrn"/>
                 <outlet property="stateLabel" destination="YYV-yF-5Pw" id="yVZ-lS-wi8"/>
-                <outlet property="totalTimeLabel" destination="N9a-ry-WfX" id="oQt-ud-J66"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
-                <outlet property="view1" destination="yNR-k8-i8k" id="Jbf-bt-Q7U"/>
-                <outlet property="view2" destination="Kr2-QK-s3T" id="ll6-Fo-68I"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -25,14 +24,6 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kr2-QK-s3T">
-                    <rect key="frame" x="0.0" y="333.5" width="375" height="333.5"/>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yNR-k8-i8k">
-                    <rect key="frame" x="0.0" y="50" width="375" height="283.5"/>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                </view>
                 <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="KvZ-4g-DxG">
                     <rect key="frame" x="79" y="617" width="217" height="31"/>
                     <constraints>
@@ -40,11 +31,9 @@
                     </constraints>
                     <color key="minimumTrackTintColor" red="0.30196078431372547" green="0.9137254901960784" blue="0.71372549019607845" alpha="1" colorSpace="calibratedRGB"/>
                     <connections>
-                        <action selector="progressTouchDown:" destination="-1" eventType="touchDown" id="HNF-eY-SB9"/>
                         <action selector="progressTouchUp:" destination="-1" eventType="touchCancel" id="KlQ-vB-UcJ"/>
                         <action selector="progressTouchUp:" destination="-1" eventType="touchUpOutside" id="RxZ-JJ-R2l"/>
                         <action selector="progressTouchUp:" destination="-1" eventType="touchUpInside" id="uqa-VW-ZzP"/>
-                        <action selector="progressValueChanged:" destination="-1" eventType="valueChanged" id="Yak-mS-ObU"/>
                     </connections>
                 </slider>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z4U-C2-ln8">
@@ -104,7 +93,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Ni-i3-gt9">
-                    <rect key="frame" x="16" y="20" width="50" height="30"/>
+                    <rect key="frame" x="16" y="40" width="50" height="30"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <state key="normal" title="Back">
                         <color key="titleColor" red="0.30196078430000001" green="0.91372549020000005" blue="0.71372549019999998" alpha="1" colorSpace="calibratedRGB"/>
@@ -118,14 +107,10 @@
             <constraints>
                 <constraint firstItem="z4U-C2-ln8" firstAttribute="top" secondItem="B1q-g9-Vrs" secondAttribute="bottom" constant="15" id="183-aD-aqE"/>
                 <constraint firstItem="1Ni-i3-gt9" firstAttribute="leading" secondItem="B1q-g9-Vrs" secondAttribute="leading" id="3MQ-dU-cVd"/>
-                <constraint firstItem="yNR-k8-i8k" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="6rf-kL-edG"/>
-                <constraint firstAttribute="trailing" secondItem="yNR-k8-i8k" secondAttribute="trailing" id="9hE-5W-Sz8"/>
                 <constraint firstItem="z4U-C2-ln8" firstAttribute="centerY" secondItem="KvZ-4g-DxG" secondAttribute="centerY" id="A1B-uY-Tn2"/>
                 <constraint firstItem="N9a-ry-WfX" firstAttribute="centerY" secondItem="KvZ-4g-DxG" secondAttribute="centerY" id="A86-3J-HK5"/>
                 <constraint firstItem="Fl7-Yh-lyd" firstAttribute="width" secondItem="B1q-g9-Vrs" secondAttribute="width" id="CWB-pb-Nhr"/>
-                <constraint firstItem="1Ni-i3-gt9" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="DEC-co-CTL"/>
-                <constraint firstItem="Kr2-QK-s3T" firstAttribute="top" secondItem="yNR-k8-i8k" secondAttribute="bottom" id="Dj4-YE-hjT"/>
-                <constraint firstAttribute="bottom" secondItem="KvZ-4g-DxG" secondAttribute="bottom" constant="20" id="NJi-fI-1Un"/>
+                <constraint firstItem="t5Z-9z-Yt5" firstAttribute="bottom" secondItem="KvZ-4g-DxG" secondAttribute="bottom" constant="20" id="NJi-fI-1Un"/>
                 <constraint firstItem="YYV-yF-5Pw" firstAttribute="centerY" secondItem="B1q-g9-Vrs" secondAttribute="centerY" id="Nea-yI-35m"/>
                 <constraint firstAttribute="trailing" secondItem="N9a-ry-WfX" secondAttribute="trailing" constant="16" id="QM8-KF-0vU"/>
                 <constraint firstItem="KvZ-4g-DxG" firstAttribute="leading" secondItem="z4U-C2-ln8" secondAttribute="trailing" constant="5" id="RgY-Hm-6yT"/>
@@ -133,18 +118,15 @@
                 <constraint firstItem="B1q-g9-Vrs" firstAttribute="leading" secondItem="z4U-C2-ln8" secondAttribute="leading" id="UIf-pb-fiG"/>
                 <constraint firstItem="Fl7-Yh-lyd" firstAttribute="height" secondItem="B1q-g9-Vrs" secondAttribute="height" id="b3Z-sz-BXJ"/>
                 <constraint firstItem="YYV-yF-5Pw" firstAttribute="trailing" secondItem="N9a-ry-WfX" secondAttribute="trailing" id="eX4-4I-de1"/>
-                <constraint firstAttribute="bottom" secondItem="Kr2-QK-s3T" secondAttribute="bottom" id="hnz-Tl-6au"/>
-                <constraint firstItem="Kr2-QK-s3T" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="iLL-Iy-KPS"/>
                 <constraint firstItem="Fl7-Yh-lyd" firstAttribute="leading" secondItem="B1q-g9-Vrs" secondAttribute="trailing" constant="10" id="n10-sF-qz8"/>
                 <constraint firstItem="z4U-C2-ln8" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="16" id="n7Z-Z9-At4"/>
-                <constraint firstItem="yNR-k8-i8k" firstAttribute="top" secondItem="1Ni-i3-gt9" secondAttribute="bottom" id="nbf-KY-d2F"/>
-                <constraint firstAttribute="trailing" secondItem="Kr2-QK-s3T" secondAttribute="trailing" id="okM-4K-hzC"/>
-                <constraint firstAttribute="centerY" secondItem="yNR-k8-i8k" secondAttribute="bottom" id="r7r-UT-kwc"/>
+                <constraint firstItem="1Ni-i3-gt9" firstAttribute="top" secondItem="t5Z-9z-Yt5" secondAttribute="top" constant="20" id="seP-94-S2R"/>
                 <constraint firstItem="1Ni-i3-gt9" firstAttribute="height" secondItem="B1q-g9-Vrs" secondAttribute="height" id="st4-zN-kd8"/>
                 <constraint firstItem="1Ni-i3-gt9" firstAttribute="width" secondItem="B1q-g9-Vrs" secondAttribute="width" id="tmD-hf-XCs"/>
                 <constraint firstItem="N9a-ry-WfX" firstAttribute="leading" secondItem="KvZ-4g-DxG" secondAttribute="trailing" constant="5" id="zfb-jc-5uD"/>
             </constraints>
-            <point key="canvasLocation" x="33.5" y="53.5"/>
+            <viewLayoutGuide key="safeArea" id="t5Z-9z-Yt5"/>
+            <point key="canvasLocation" x="32.799999999999997" y="52.623688155922046"/>
         </view>
     </objects>
 </document>
